Fixed bug where header didnt wrap around title if there was no slogan.

--- a/sass/latto.base.scss
+++ b/sass/latto.base.scss
@@ -20,6 +20,36 @@ body {
 header {
   background: $theme-header-pattern;
   overflow: hidden;
+  
+  .header-inner {
+    margin-left: $default-spacing / 2;
+    margin-right: $default-spacing / 2;
+    overflow: hidden;
+    padding-bottom: $default-spacing * 1.5;
+    padding-top: $default-spacing * 1.5;
+    
+    background-color: lighten($gray-light, 5%);
+   }
+
+  .logo {
+    float: left;
+    margin-left: $default-spacing;
+  }
+
+  .site-name {
+    color: $black;
+    float: left;
+    font-size: 400%;
+    line-height: 100%;
+    margin-left: $default-spacing;
+  }
+
+  .site-slogan {
+    clear: left;
+    font-size: 115%;
+    color: darken($gray-dark, 50%);
+    margin-left: $default-spacing;
+  }
 }
 
 p {
@@ -46,34 +76,6 @@ hr {
   &.tertiary {
     @include colruler($gray-light);
   }
-}
-
-.header-inner {
-  margin-left: $default-spacing / 2;
-  margin-right: $default-spacing / 2;
-  padding-bottom: $default-spacing * 1.5;
-  padding-top: $default-spacing * 1.5;
-  background-color: lighten($gray-light, 5%);
- }
-
-.logo {
-  float: left;
-  margin-left: $default-spacing;
-}
-
-.site-name {
-  color: $black;
-  float: left;
-  font-size: 400%;
-  line-height: 100%;
-  margin-left: $default-spacing;
-}
-
-.site-slogan {
-  clear: left;
-  font-size: 115%;
-  color: darken($gray-dark, 50%);
-  margin-left: $default-spacing;
 }
 
 // The wrapper for the grid layout.
